Added all menus. Just gotta do edit account. Now wokring reddit login

--- a/place_downloader/Cargo.toml
+++ b/place_downloader/Cargo.toml
@@ -6,11 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-recursion = "1.0.4"
 dirs = "5.0.1"
-ffmpeg-next = "6.0.0"
-magick_rust = "0.19.0"
+lazy_static = "1.4.0"
+num_cpus = "1.16.0"
 reqwest = "0.11.18"
+scraper = "0.17.1"
 serde = "1.0.176"
 serde_derive = "1.0.176"
 serde_json = "1.0.104"
-tokio = "1.29.1"
+tokio = { version = "1.29.1", features = ["full"] }
