--- a/place_downloader/Cargo.toml
+++ b/place_downloader/Cargo.toml
@@ -10,7 +10,7 @@ async-recursion = "1.0.4"
 dirs = "5.0.1"
 lazy_static = "1.4.0"
 num_cpus = "1.16.0"
-reqwest = "0.11.18"
+reqwest = { version = "0.11", features = ["cookies"] }
 scraper = "0.17.1"
 serde = "1.0.176"
 serde_derive = "1.0.176"
