--- a/place_downloader/Cargo.toml
+++ b/place_downloader/Cargo.toml
@@ -7,9 +7,14 @@ edition = "2021"
 
 [dependencies]
 async-recursion = "1.0.4"
+colored = "2.0.4"
 dirs = "5.0.1"
+encoding_rs = "0.8.32"
+env_logger = {version = "0.10.0", features = ["default"]}
 lazy_static = "1.4.0"
+log = "0.4.19"
 num_cpus = "1.16.0"
+regex = "1.9.1"
 reqwest = { version = "0.11", features = ["cookies"] }
 scraper = "0.17.1"
 serde = "1.0.176"
