--- a/place_downloader/Cargo.toml
+++ b/place_downloader/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 async-recursion = "1.0.4"
+base64 = "0.21.2"
 colored = "2.0.4"
 dirs = "5.0.1"
 encoding_rs = "0.8.32"
