--- a/place_downloader/Cargo.toml
+++ b/place_downloader/Cargo.toml
@@ -15,6 +15,7 @@ env_logger = {version = "0.10.0", features = ["default"]}
 lazy_static = "1.4.0"
 log = "0.4.19"
 num_cpus = "1.16.0"
+rand = "0.8.5"
 regex = "1.9.1"
 reqwest = { version = "0.11", features = ["cookies"] }
 scraper = "0.17.1"
